add ability to calculate mins and maxs

--- a/data_curation.ipynb
+++ b/data_curation.ipynb
@@ -1096,7 +1096,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's useful to know the minimum values for each column, this code seems to extract that"
+    "It's useful to know the minimum and maximum values for each column, this code seems to extract that"
    ]
   },
   {
@@ -1151,6 +1151,60 @@
     "for category in categories:\n",
     "    minimums[category] = df[category].min()\n",
     "minimums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AGE_CAT_0-4': 0.06383995120567601,\n",
+       " 'AGE_CAT_10-14': 0.056324747010119004,\n",
+       " 'AGE_CAT_15-19': 0.063846723908820999,\n",
+       " 'AGE_CAT_20-24': 0.085765415754705004,\n",
+       " 'AGE_CAT_25-29': 0.102077609318972,\n",
+       " 'AGE_CAT_30-34': 0.093434305736531012,\n",
+       " 'AGE_CAT_35-39': 0.082915517718154003,\n",
+       " 'AGE_CAT_40-44': 0.077784436288361,\n",
+       " 'AGE_CAT_45-49': 0.075849559854445012,\n",
+       " 'AGE_CAT_5-9': 0.059873279776160006,\n",
+       " 'AGE_CAT_50-54': 0.080053287935410999,\n",
+       " 'AGE_CAT_55-59': 0.070929187118087003,\n",
+       " 'AGE_CAT_60-64': 0.058866115719759006,\n",
+       " 'AGE_CAT_65-69': 0.051349401746930007,\n",
+       " 'AGE_CAT_70-74': 0.037978223483719001,\n",
+       " 'AGE_CAT_75-79': 0.029815950278871003,\n",
+       " 'AGE_CAT_80-84': 0.024009837590887002,\n",
+       " 'AGE_CAT_85-89': 0.016425170014688,\n",
+       " 'AGE_CAT_90+': 0.0090221476474980009,\n",
+       " 'BUSINESSES': 0,\n",
+       " 'CRIME': 0.9909,\n",
+       " 'OUTDOOR': 0.80000000000000004,\n",
+       " 'PARKS': 0.91000000000000003,\n",
+       " 'POPULATION': 5583064,\n",
+       " 'TRANSIT_SCORE': 0.78000000000000003,\n",
+       " 'UNEMPLOYMENT': 0,\n",
+       " 'UNEMPL_15+': 0.098000000000000004,\n",
+       " 'UNEMPL_15-24': 0.21600000000000003,\n",
+       " 'UNIVERSITY': 1.0}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "maximums = {}\n",
+    "categories = map( str , df.columns.values.tolist())\n",
+    "for category in categories:\n",
+    "    maximums[category] = df[category].max()\n",
+    "maximums"
    ]
   },
   {
